Included viewModel as parameter in dialogservice to allow for reference of viewmodel

--- a/Osc.Dejection.Sample/Osc.Dejection.Sample.csproj
+++ b/Osc.Dejection.Sample/Osc.Dejection.Sample.csproj
@@ -88,6 +88,7 @@
     <Compile Include="ViewModels\Test2ViewModel.cs" />
     <Compile Include="ViewModels\Test3ViewModel.cs" />
     <Compile Include="ViewModels\Test4ViewModel.cs" />
+    <Compile Include="ViewModels\Test5ViewModel.cs" />
     <Compile Include="Views\ApplicationView.xaml.cs">
       <DependentUpon>ApplicationView.xaml</DependentUpon>
     </Compile>
@@ -102,6 +103,9 @@
     </Compile>
     <Compile Include="Views\Test4View.xaml.cs">
       <DependentUpon>Test4View.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Test5View.xaml.cs">
+      <DependentUpon>Test5View.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -160,6 +164,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Test4View.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Test5View.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
