--- a/Osc.Dejection.Sample/Osc.Dejection.Sample.csproj
+++ b/Osc.Dejection.Sample/Osc.Dejection.Sample.csproj
@@ -83,6 +83,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Extensions\WindowExtensions.cs" />
     <Compile Include="ViewModels\ApplicationViewModel.cs" />
     <Compile Include="ViewModels\Test1ViewModel.cs" />
     <Compile Include="ViewModels\Test2ViewModel.cs" />
@@ -172,6 +173,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
